Reorder allowed origins in `SecurityConfig` for better readability.